# Luis_LocalLLM

./: .gitignore  README.md
.github/workflows/: ci.yml
ai_assistant/: .dockerignore  .env.example  .gitignore  AI_Assistant_Project_Documentation.docx  Dockerfile  README.md  SECURITY.md  docker-compose.yml  main.py  mobile_api_server.py  pyproject.toml  requirements-prod.txt  requirements.txt
ai_assistant/app/: __init__.py  bootstrap.py
ai_assistant/assistant/: core.py  fallback.py  router.py
ai_assistant/commands/: base.py  calculator.py  general_qa.py  health.py  help.py  notes.py  registry.py  reminders.py  system_info.py  weather.py
ai_assistant/config/: __init__.py  settings.py
ai_assistant/nlp/: intent_classifier.py
ai_assistant/scripts/: generate_documentation.py  healthcheck.py  run.ps1  run.sh  run_mobile_server.ps1  run_web.ps1
ai_assistant/services/: auth_service.py  cache.py  conversation_memory.py  health.py  knowledge_base.py  llm_service.py  logging_config.py  metrics.py  prompt_optimizer.py  rate_limiter.py  reminder_store.py  scheduler.py  storage.py  user_store.py  voice_stt.py  voice_tts.py
ai_assistant/tests/: conftest.py  test_auth.py  test_calculator.py  test_health.py  test_intent.py  test_llm_service.py  test_prompt_optimizer.py  test_reminders.py  test_security.py  test_storage.py
ai_assistant/utils/: __init__.py  validation.py
ai_assistant/web/: __init__.py  server.py
ai_assistant/web/static/css/: app.css
ai_assistant/web/static/js/: app.js
ai_assistant/web/templates/: index.html
data/: app.db
