[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-assistant"
version = "1.0.0"
description = "Production-grade modular AI assistant with offline-first command routing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
]

[project.optional-dependencies]
voice = [
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "vosk>=0.3.45",
    "faster-whisper>=1.0.0",
    "pyttsx3>=2.90",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ai-assistant = "main:entrypoint"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]